Pass the pages#update URL to Stimulus controller

--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,4 +1,8 @@
 <h1>Pages#show</h1>
 <p>Find me in app/views/pages/show.html.erb</p>
 
-<div data-controller="editor" data-editor-content-value="<%= @page.content %>"></div> 
+<div 
+  data-controller="editor" 
+  data-editor-content-value="<%= @page.content %>"
+  data-editor-update-url-value="<%= page_path(@page) %>"> 
+</div> 
