Define editor state static targets
First steps in using the Stimulus targets API to dynamically update a
specific element. Here, we're aiming to update the "status" element to
display messages such as "saving" or "saved!".

*LEARNING: static targets*

May look like a simple static array, but Stimulus adds methods to
interact with it:
 - this.statusTarget: retrieves first matching target element
 - this.statusTargets: retrieves all matching target elements as array
 - this.hasStatusTargets: returns boolean indicating whether the target
   exists

Stimulus automatically queries the DOM for any elements with the
data-editor-target="status" within the controller-element's scope (
within <div data-controller="editor"></div>)

(from section 3.3.5)

--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -5,4 +5,6 @@
   data-controller="editor" 
   data-editor-content-value="<%= @page.content %>"
   data-editor-update-url-value="<%= page_path(@page) %>"> 
+  
+  <span data-editor-target="status"></span>
 </div> 
